--- a/src/components/weddings/Weddings.css
+++ b/src/components/weddings/Weddings.css
@@ -1,26 +1,23 @@
 .wedding-section-container {
-  min-height: 120vh;
+  height: 120vh;
   background-color: black;
-  padding: 2vw;
+  padding: 38px;
   position: relative;
 }
 
 .wedding-categories-btns {
   display: flex;
-  gap: 2rem;
-  flex-wrap: wrap;
-  justify-content: center;
+  gap: 3rem;
 }
 
 .wedding-categories-btns button {
-  padding: 1.5vw;
+  padding: 18px;
   background-color: #141414;
   border: none;
   font-family: "Italiana", sans-serif;
   font-weight: bold;
   color: #ffffff;
-  font-size: 1.5vw;
-  min-width: 10rem;
+  font-size: 20px;
 }
 
 .wedding-categories-btns button.active {
@@ -30,21 +27,18 @@
 
 .content-type-btns {
   display: flex;
-  gap: 2rem;
-  margin-top: 2vh;
-  flex-wrap: wrap;
-  justify-content: center;
+  gap: 3rem;
+  margin-top: 20px;
 }
 
 .content-type-btns button {
-  padding: 1.5vw;
+  padding: 18px;
   background-color: #141414;
   border: none;
   font-family: "Italiana", sans-serif;
   font-weight: bold;
   color: #ffffff;
-  font-size: 1.5vw;
-  min-width: 10rem;
+  font-size: 20px;
 }
 
 .content-type-btns button.active {
@@ -53,31 +47,30 @@
 }
 
 .content-area {
-  margin-top: 2vh;
+  margin-top: 20px;
 }
 
 .gallery-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 2vw;
-  margin-top: 2vh;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-top: 20px;
 }
 
 .gallery-item {
   background: #1a1a1a;
   position: relative;
-  aspect-ratio: 16 / 9;
 }
 
 .gallery-item img {
   width: 100%;
-  height: 100%;
+  height: 200px;
   object-fit: cover;
 }
 
 .gallery-item video {
   width: 100%;
-  height: 100%;
+  height: 200px;
   object-fit: cover;
   background: #1a1a1a;
 }
@@ -85,13 +78,11 @@
 .video-preview {
   position: relative;
   cursor: pointer;
-  width: 100%;
-  height: 100%;
 }
 
 .video-preview video {
   width: 100%;
-  height: 100%;
+  height: 200px;
   object-fit: cover;
   background: #1a1a1a;
 }
@@ -101,16 +92,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 10vw;
-  height: 10vw;
-  max-width: 50px;
-  max-height: 50px;
+  width: 50px;
+  height: 50px;
   background-color: #1c6000;
   border: none;
   border-radius: 50%;
   color: white;
-  font-size: 2vw;
-  min-font-size: 20px;
+  font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -119,16 +107,14 @@
 
 .expand-button {
   position: absolute;
-  top: 1vw;
-  right: 1vw;
+  top: 10px;
+  right: 10px;
   background-color: #1c6000;
   border: none;
   color: white;
-  padding: 0.5vw;
+  padding: 5px;
   cursor: pointer;
-  font-size: 2vw;
-  max-width: 30px;
-  max-height: 30px;
+  font-size: 18px;
 }
 
 .modal {
@@ -146,10 +132,8 @@
 
 .modal-content {
   position: relative;
-  width: 80%;
-  height: 80%;
-  max-width: 800px;
-  max-height: 600px;
+  max-width: 80%;
+  max-height: 80%;
 }
 
 .modal-content video {
@@ -160,117 +144,12 @@
 
 .close-button {
   position: absolute;
-  top: 1vw;
-  right: 1vw;
+  top: 10px;
+  right: 10px;
   background-color: #1c6000;
   border: none;
   color: white;
-  font-size: 2vw;
-  padding: 0.5vw;
+  font-size: 20px;
+  padding: 5px 10px;
   cursor: pointer;
-  max-width: 40px;
-  max-height: 40px;
-}
-
-@media (max-width: 768px) {
-  .wedding-section-container {
-    padding: 2vw;
-    min-height: 100vh;
-  }
-
-  .wedding-categories-btns button,
-  .content-type-btns button {
-    padding: 3vw;
-    font-size: 2.5vw;
-    min-width: 8rem;
-  }
-
-  .gallery-grid {
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    gap: 1.5vw;
-  }
-
-  .gallery-item {
-    aspect-ratio: 1 / 1;
-  }
-
-  .play-button {
-    width: 15vw;
-    height: 15vw;
-    max-width: 40px;
-    max-height: 40px;
-    font-size: 3vw;
-  }
-
-  .expand-button {
-    top: 1.5vw;
-    right: 1.5vw;
-    padding: 1vw;
-    font-size: 3vw;
-    max-width: 25px;
-    max-height: 25px;
-  }
-
-  .modal-content {
-    width: 90%;
-    height: 90%;
-    max-width: 600px;
-    max-height: 450px;
-  }
-
-  .close-button {
-    top: 1.5vw;
-    right: 1.5vw;
-    font-size: 3vw;
-    padding: 1vw;
-    max-width: 35px;
-    max-height: 35px;
-  }
-}
-
-@media (max-width: 480px) {
-  .wedding-categories-btns button,
-  .content-type-btns button {
-    padding: 4vw;
-    font-size: 3vw;
-    min-width: 6rem;
-  }
-
-  .gallery-grid {
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 1vw;
-  }
-
-  .play-button {
-    width: 20vw;
-    height: 20vw;
-    max-width: 30px;
-    max-height: 30px;
-    font-size: 4vw;
-  }
-
-  .expand-button {
-    top: 2vw;
-    right: 2vw;
-    padding: 1.5vw;
-    font-size: 4vw;
-    max-width: 20px;
-    max-height: 20px;
-  }
-
-  .modal-content {
-    width: 95%;
-    height: 95%;
-    max-width: 400px;
-    max-height: 300px;
-  }
-
-  .close-button {
-    top: 2vw;
-    right: 2vw;
-    font-size: 4vw;
-    padding: 1.5vw;
-    max-width: 30px;
-    max-height: 30px;
-  }
 }
