--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -47,7 +47,7 @@ nav {
 
 .nav-contact button,
 .mobile-cta button {
-  background-color: #007a33;
+  background-color: #1c6000;
   color: #fff;
   border: none;
   padding: 10px 25px;
@@ -60,7 +60,7 @@ nav {
 
 .nav-contact button:hover,
 .mobile-cta button:hover {
-  background-color: #005a26;
+  background-color: #1c6000;
 }
 
 .hamburger {
@@ -105,7 +105,7 @@ nav {
     right: 20px;
     top: 10px;
     font-size: 28px;
-    color: #000;
+    color: #ffffff;
     background: none;
     border: none;
   }
